[package]
name = "learn_crossterm"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
rand = "0.8.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies.crossterm]
# path = '../crossterm'


# [dependencies]
# crossterm = "0.27.0"
